SERVER-72996 Ignore NamespaceExists status when QE compact creates the ECOC collection